[project]
name = "ConsoleUI"
version = "0.0.1"
description = "A library for creating console user interfaces."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
install_requires = [
    "boxpy @ git+ssh://git@github.com/neverUsedGithub/Boxpy.git>=0.0.1",
    "getkey>=0.6.5"
]