[project]
name = "console_ui"
version = "0.0.1"
description = "A library for creating console user interfaces."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "boxpy @ git+https://github.com/neverUsedGithub/Boxpy.git",
    "getkey>=0.6.5"
]

[build-system]
requires = ['setuptools']
build-backend = "setuptools.build_meta"